fixed indicator z-index greater than side panel z-index to fix 18/05 robot test

--- a/resources/private/common-html/sass/partials/_indicator.scss
+++ b/resources/private/common-html/sass/partials/_indicator.scss
@@ -3,7 +3,7 @@
     display: none;
     position: fixed;
     width: 100%;
-    z-index: 2001;
+    z-index: 2002;
     color: #fff;
     font-size: 18px;
     box-sizing: border-box;
