--- a/resources/public/lp-static/css/main.css
+++ b/resources/public/lp-static/css/main.css
@@ -1,4 +1,4 @@
-@import url('main-blessed1.css?z=1481118901792');
+@import url('main-blessed1.css?z=1481266653574');
 
 /* line 20, ../../../private/common-html/sass/partials/_inputs.scss */
 .form-grid input[type=text]:disabled, .form-grid input[type=password]:disabled, .form-grid select:disabled, .form-grid textarea:disabled, .form-grid span.form-string:disabled {
@@ -5614,7 +5614,7 @@ div.search i {
   display: none;
   position: fixed;
   width: 100%;
-  z-index: 2001;
+  z-index: 2002;
   color: #fff;
   font-size: 18px;
   box-sizing: border-box;
